--- a/autoportrait1.html
+++ b/autoportrait1.html
@@ -42,7 +42,7 @@
       </div>
       <!--TITRE nDU CHAPITRE DANS LE MENU-->
       <div>
-        <h4>Autoportrait en pied (1)</h4>
+        <h4>Autoportrait en pied</h4>
       </div>
     </div>
   </nav>
@@ -58,13 +58,13 @@
         <div class="card">
           <div class="card-body corpstexte">
             <!--TITRE CHAPITRE-->
-            <h4 class="card-title">Autoportrait en pied (1)</h4>
+            <h4 class="card-title">Autoportrait en pied</h4>
             <br />
             <!--TEXTE CHAPITRE PARAGRAPHE 1-->
             <p class="card-text p1">De soi-même, exposer les pieds, c’est bien suffisant.
             </p>
             <!--IMAGE CHAPITRE-->
-            <img src="assets/img/autoportrait1.jpeg" class="img-fluid image" />
+            <img src="assets/img/autoportrait.jpeg" class="img-fluid image" />
             <!--TEXTE CHAPITRE PARAGRAPHES-->
             <p>Comment je me retrouve en Clarks, lacets défaits, sur les pavés de la place d’Armes à Versailles, c’est
               une petite histoire. Je voulais voir l’Espagne, j’y suis allé. J’allais y retourner quand Fatima m’a
