modif, notamment autoportrait

--- a/autoportrait1.html
+++ b/autoportrait1.html
@@ -67,34 +67,34 @@
             <img src="assets/img/autoportrait.jpeg" class="img-fluid image" />
             <!--TEXTE CHAPITRE PARAGRAPHES-->
             <p>Comment je me retrouve en Clarks, lacets défaits, sur les pavés de la place d’Armes à Versailles, c’est
-              une petite histoire. Je voulais voir l’Espagne, j’y suis allé. J’allais y retourner quand Fatima m’a
-              invité au Brésil, où je ne suis pas allé parce que je ne voulais pas prendre l’avion. Alors je vais à pied
-              et à vélo, ici et là, plutôt ici que là. Je lis de plus en plus de livres, tous les
-              <cite>Rougon-Macquart</cite>, <cite>Les
-                tribulations d’un Chinois en Chine</cite>, les deux Marguerite, Duras et
-              Yourcenar, <cite>La mort à Venise</cite> mais je
-              préfère l’<cite>Histoire de ma vie</cite> de Casanova, <cite>Tintin</cite> et <cite>Gaston Lagaffe</cite> les nuits sans sommeil,
-              <cite>La Jalousie</cite> d’Alain Robbe-Grillet parce qu’on m’oblige, <cite>Le
-                rivage des Syrtes</cite> par amour pour quelqu’un, les romans d’un écrivain tchécoslovaque nommé
-              Kundera, ceux
-              d’un écrivain espagnol nommé Perez Reverte, pas trop d’Américains, mais beaucoup d’Anglais, des Anglaises
-              et des Anglais de toute sorte, John le Carré, Edward Morgan Forster, Jane Austen et Agatha Christie, et puis des
-              Japonais, celui dont j’oublie toujours le nom mais c’est vraiment bien, <cite>Un thé au Sahara</cite> de
-              Paul Bowles,
-              <cite>La Charteuse de Parme</cite> deux fois,  et
-              même <cite>La Guerre et la Paix</cite> et <cite>Anna Karénine</cite>, des mémoires de diplomates, des bouts de la
-              <cite>Recherche</cite>,
-              Claude Simon quand il obtient le prix Nobel, et aussi <cite>Cent ans de solitude</cite> de Gabriel
-              Garcia Marquez, et
-              <cite>Ulysse</cite> de Joyce mais j’abandonne, des romans oubliés d’Elisabeth
-              Porquerol parce que c’est ma voisine, le <cite>Cycle de Fondation</cite> d’Isaac Azimov mais ça m’emmène
-              trop loin. Par
-              ces biais, le regard biaisé des livres sur les mondes dans le monde, je fais des excursions dans diverses
-              contrées, tout en mangeant pas mal de chocolat du Vénézuela et en buvant du moka d’Éthiopie. Je rêve de La
-              Marsa, d’Istanbul, du Japon, des pyramides aztèques ou simplement d’Italie ou de Berlin, et toujours
-              d’Espagne. À la fin je passe deux jours à Bruxelles. Au bout du bout, pas de Brésil mais je me retrouve en
-              tong sur un trottoir de la rue Pasteur qui, à Phnom Penh, porte le même numéro que le pastis à Marseille,
-              51, une grande histoire.
+              une petite histoire.</p>
+            <p>Je voulais voir l’Espagne, j’y suis allé. J’allais y retourner quand Fatima m’a
+            invité au Brésil, où je ne suis pas allé parce que je ne voulais pas prendre l’avion. Alors je vais à pied
+            et à vélo, ici et là, plutôt ici que là. Je lis de plus en plus de livres, tous les
+            <cite>Rougon-Macquart</cite>, <cite>Les
+            tribulations d’un Chinois en Chine</cite>, les deux Marguerite, Duras et
+            Yourcenar, <cite>La mort à Venise</cite> mais je
+            préfère l’<cite>Histoire de ma vie</cite> de Casanova, <cite>Tintin</cite> et <cite>Gaston Lagaffe</cite> les nuits sans sommeil,
+            <cite>L'Éducation sentimentale</cite>parce qu’on m’oblige, <cite>Le
+            rivage des Syrtes</cite> par amour pour quelqu’un, les romans d’un écrivain tchécoslovaque nommé
+            Kundera, celui
+            d’un écrivain italien nommé Lampedusa comme cette île entre Malte et la Tunisie, pas trop d’Américains, mais beaucoup d’Anglais, des Anglaises
+            et des Anglais de toute sorte, John le Carré, Edward Morgan Forster, Jane Austen, Agatha Christie et Willam Boyd, et puis des
+            Japonais, celui dont j’oublie toujours le nom mais c’est vraiment bien, <cite>Un thé au Sahara</cite> de
+            Paul Bowles,
+            <cite>La Charteuse de Parme</cite> deux fois, et
+            même <cite>La Guerre et la Paix</cite> et <cite>Anna Karénine</cite>, des mémoires de diplomates, des bouts de la
+            <cite>Recherche</cite>, Claude Simon quand il obtient le prix Nobel, et aussi <cite>Cent ans de solitude</cite> de Gabriel Garcia Marquez, et
+            <cite>Ulysse</cite> de Joyce mais j’abandonne, des romans oubliés d’Elisabeth
+            Porquerol parce que c’est ma voisine, le <cite>Cycle de Fondation</cite> d’Isaac Azimov mais ça m’emmène
+            trop loin. Par
+            ces biais, le regard biaisé des livres sur les mondes dans le monde, je fais des excursions dans diverses
+            contrées, tout en mangeant pas mal de chocolat du Vénézuela et en buvant du moka d’Éthiopie. Je rêve de La
+            Marsa, d’Istanbul, du Japon, des pyramides aztèques ou simplement d’Italie ou de Berlin, et toujours
+            d’Espagne. À la fin je passe deux jours à Bruxelles.</p> 
+            <p>Au bout du bout, pas de Brésil mais je me retrouve en
+            tong sur un trottoir de la rue Pasteur qui, à Phnom Penh, porte le même numéro que le pastis à Marseille,
+            51, une grande histoire.
             </p>
             <br />
           </div>
