--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="row row-cols-1 row-cols-lg-2 g-4">
             <div class="col">
                 <div class="card h-100 py-2 px-4 border-white">
-                    <img src="assets/img/autoportrait2.JPEG" class="card-img" alt="...">
+                    <img src="assets/img/autoportrait.JPEG" class="card-img" alt="...">
                 </div>
             </div>
             <div class="col">
@@ -71,12 +71,14 @@
                 <div id="sommaire" class="card py-2 px-4 h-100  border-white">
                     <p class="card-title fontseparateur">SOMMAIRE</p>
                     <div style="line-height: 200%;">
-                        <p><a class="card-text sommaire" href="autoportrait1.html">Autoportrait en pied (1)</a></p>
+                        <p><a class="card-text sommaire" href="autoportrait1.html">Autoportrait en pied</a></p>
                         <p><a class="card-text sommaire" href="ami.html">L'ami qui me parle</a></p>
                         <p><a class="card-text sommaire" href="parleurs.html">Les hauts-parleurs</a></p>
-                        <p><a class="card-text sommaire" href="/splendeur">La splendeur du trône</a></p>
-                        <p><a class="card-text sommaire" href="/portes">Les portes bleues</a></p>
-                        <p><a class="card-text sommaire" href="/autoportrait2">Autoportrait en pied (2)</a></p>
+                        <p><a class="card-text sommaire" href="splendeur.html">La splendeur du trône</a></p>
+                        <p><a class="card-text sommaire" href="portes.html">Les portes bleues</a></p>
+                        <p><a class="card-text sommaire" href="sud.html">Sud-Express</a></p>
+                        <p><a class="card-text sommaire" href="sud.html">Les mots de passe</a></p>
+                        <p><a class="card-text sommaire" href="passage.html">Petit passage</a></p>
                     </div>
                 </div>
             </div>
