--- a/autoportrait1.html
+++ b/autoportrait1.html
@@ -79,16 +79,16 @@
             rivage des Syrtes</cite> par amour pour quelqu’un, les romans d’un écrivain tchécoslovaque nommé
             Kundera, celui
             d’un écrivain italien nommé Lampedusa comme cette île entre Malte et la Tunisie, pas trop d’Américains, mais beaucoup d’Anglais, des Anglaises
-            et des Anglais de toute sorte, John le Carré, Edward Morgan Forster, Jane Austen, Agatha Christie et Willam Boyd, et puis des
+            et des Anglaises bien sûr, et puis des
             Japonais, celui dont j’oublie toujours le nom mais c’est vraiment bien, <cite>Un thé au Sahara</cite> de
-            Paul Bowles,
+            Paul Bowles, on me propose de voyager au bout de la nuit mais je refuse,
             <cite>La Charteuse de Parme</cite> deux fois, et
             même <cite>La Guerre et la Paix</cite> et <cite>Anna Karénine</cite>, des mémoires de diplomates, des bouts de la
-            <cite>Recherche</cite>, Claude Simon quand il obtient le prix Nobel, et aussi <cite>Cent ans de solitude</cite> de Gabriel Garcia Marquez, et
+            <cite>Recherche</cite>, Modiano quand il obtient le prix Nobel, et aussi <cite>Cent ans de solitude</cite> de Gabriel Garcia Marquez, et
             <cite>Ulysse</cite> de Joyce mais j’abandonne, des romans oubliés d’Elisabeth
             Porquerol parce que c’est ma voisine, le <cite>Cycle de Fondation</cite> d’Isaac Azimov mais ça m’emmène
             trop loin. Par
-            ces biais, le regard biaisé des livres sur les mondes dans le monde, je fais des excursions dans diverses
+            ces biais, le regard oblique des livres sur l'univers entier, je fais des excursions dans diverses
             contrées, tout en mangeant pas mal de chocolat du Vénézuela et en buvant du moka d’Éthiopie. Je rêve de La
             Marsa, d’Istanbul, du Japon, des pyramides aztèques ou simplement d’Italie ou de Berlin, et toujours
             d’Espagne. À la fin je passe deux jours à Bruxelles.</p> 
