petite modif à la fin

--- a/autoportrait1.html
+++ b/autoportrait1.html
@@ -93,7 +93,7 @@
             Marsa, d’Istanbul, du Japon, des pyramides aztèques ou simplement d’Italie ou de Berlin, et toujours
             d’Espagne. À la fin je passe deux jours à Bruxelles.</p> 
             <p>Au bout du bout, pas de Brésil mais je me retrouve en
-            tong sur un trottoir de la rue Pasteur qui, à Phnom Penh, porte le même numéro que le pastis à Marseille,
+            tong sur un trottoir de la rue Pasteur qui, à Phnom Penh, porte le numéro
             51, une grande histoire.
             </p>
             <br />
