modif sommaire+ajout Sud-Express

--- a/ami.html
+++ b/ami.html
@@ -310,9 +310,11 @@
                                 (1)</a></p>
                         <p><a class="card-text sommairechapitrecourant" href="ami.html">L'ami qui me parle</a></p>
                         <p><a class="card-text sommaire" href="parleurs.html">Les hauts-parleurs</a></p>
-                        <p><a class="card-text sommaire" href="/splendeur">La splendeur du trône</a></p>
-                        <p><a class="card-text sommaire" href="/portes">Les portes bleues</a></p>
-                        <p><a class="card-text sommaire" href="/autoportrait2">Autoportrait en pied (2)</a></p>
+                        <p><a class="card-text sommaire" href="sud.html">Sud-Express</a></p>
+                        <p><a class="card-text sommaire" href="splendeur.html">La splendeur du trône</a></p>
+                        <p><a class="card-text sommaire" href="portes.html">Les portes bleues</a></p>
+                        <p><a class="card-text sommaire" href="mots.html">Les mots de passe</a></p>
+                        <p><a class="card-text sommaire" href="passage.html">Petit passage</a></p>
                     </div>
                 </div>
             </div>
