--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
                         <p><a class="card-text sommaire" href="autoportrait1.html">Autoportrait en pied</a></p>
                         <p><a class="card-text sommaire" href="ami.html">L'ami qui me parle</a></p>
                         <p><a class="card-text sommaire" href="parleurs.html">Les hauts-parleurs</a></p>
+                        <p><a class="card-text sommaire" href="sud.html">Sud-Express</a></p>
                         <p><a class="card-text sommaire" href="splendeur.html">La splendeur du trône</a></p>
                         <p><a class="card-text sommaire" href="portes.html">Les portes bleues</a></p>
-                        <p><a class="card-text sommaire" href="sud.html">Sud-Express</a></p>
-                        <p><a class="card-text sommaire" href="sud.html">Les mots de passe</a></p>
+                        <p><a class="card-text sommaire" href="mots.html">Les mots de passe</a></p>
                         <p><a class="card-text sommaire" href="passage.html">Petit passage</a></p>
                     </div>
                 </div>
