--- a/parleurs.html
+++ b/parleurs.html
@@ -68,23 +68,20 @@
                             la voix pour la première fois. Pour la majorité, j’ignore tout de la voix et du nom, je ne
                             sais rien. Mais puisqu’ils et elles sont interviewés par Jacques Chancel, c’est qu’ils et
                             elles sont illustres. Je m’installe, je mange du pain et du chocolat, avec le chat Nestor à
-                            mes côtés, et je les écoute.
-                        </p>
+                            mes côtés, et je les écoute.</p>
                         <p>Et comme j’écoute aussi de la musique, pour laquelle je désire de la puissance et de la
-                            stéréophonie, et que Marc, lui, a une chaîne stéréo vraiment pas mal, je rêve d’une chaîne
-                            stéréo, que dis-je, mon but dans la vie est d’arracher cette acquisition à mes parents ou à
-                            tout membre de la famille susceptible d’y contribuer.</p>
+                            stéréophonie, et que Marc, lui, a une chaîne stéréo, je rêve d’une chaîne
+                            stéréo, que dis-je, mon but dans la vie est d’arracher par tous les moyens cette acquisition.</p>
                         <p>Cet objectif étant atteint, les voix dans les hauts-parleurs prennent une gravité nouvelle.
                             Un grain. Le souffle s’entend avec la voix et même le son de la langue ou des lèvres. Les
                             doigts glissent sur les cordes des guitares. Le chat Nestor prend ses distances, la
                             puissance et la précision des hauts-parleurs dérangent ses oreilles. Jacques Chancel a une
                             belle voix. Un jour, peut-être, il me posera une question avec cette voix qui te regarde
-                            droit dans les yeux, cette voix bien posée dans l’espace entre lui et toi, pas du tout
-                            chancelante, comme quoi un nom ne dit rien de nous.</p>
+                            dans les yeux, cette voix bien posée dans l’espace entre lui et toi, pas du tout
+                            chancelante, comme quoi un nom ne veut rien dire.</p>
                         <p>Mais d’où vient cette voix ? D’où viennent les voix illustres qui rebondissent sur ses
                             questions ? Elles arrivent dans les hauts-parleurs par des ondes, mais les ondes sont
-                            invisibles. Nous sommes habitués, nous avons toujours su qu’elles existaient, les parents et
-                            les grands-parents disent qu’ils écoutent la radio depuis toujours et que les ondes
+                            invisibles. Nous sommes habitués, nous avons toujours su qu’elles existaient, les plus vieux disent qu’ils écoutent la radio depuis toujours et que les ondes
                             irradient depuis la tour Eiffel.</p>
                         <p>Plus tard, je vais à Paris et je vois la maison de la Radio depuis l’autre rive de la Seine,
                             la forme ronde, la tour carrée centrale. Elle est blanc métallique et noir anthracite. Je
@@ -97,16 +94,16 @@
                         <!--TEXTE CHAPITRE PARAGRAPHES-->
                         <p>Une nuit, je marche tout prêt de la maison de la Radio, je longe la courbe de son anneau. De
                             l’autre côté de la Seine la tour Eiffel jette son rayon lumineux dans l’infini obscur, ondes
-                            visibles qui, par temps clair, s’aperçoivent jusqu’à qui Ris-Orangis.</p>
-                        <p>Enfin, des années plus tard, je pénètre dans la Maison ronde, où j’ai un rendez-vous. Je
-                            franchis les portes vitrées du hall, il y a du marbre au sol, c’est bien le moins pour un
-                            tel palais. On m’indique les ascenseurs. Au moment où je tourne mon regard vers ces
+                            visibles qui, par temps clair, s’aperçoivent jusqu’à Ris-Orangis.</p>
+                        <p>Enfin, des années plus tard, je pénètre dans la Maison ronde. Je
+                            franchis les portes vitrées du hall, il y a du marbre au sol, c’est comme dans un
+                            palais. On m’indique les ascenseurs. Au moment où je tourne mon regard vers ces
                             ascenseurs, où je fais un premier pas dans leur direction, les portes d’acier coulissent et
                             s’écartent. Un homme en costume gris s’avance, c’est Jacques Chancel. Nous nous croisons, je
                             le regarde, il me regarde. J’entre dans l’ascenseur, je me retourne et je vois la silhouette
                             grise sortir par les portes vitrées.</p>
                         <p>C’est donc là que les voix entrent dans les micros avant d’être diffusées dans les airs, j’en
-                            reçois comme une preuve.</p>
+                            reçois la preuve.</p>
                         <p>Je suis allongé sur mon lit et j’écoute la radio. Par la fenêtre je vois un morceau de ciel
                             et les cimes pointues des sapins du jardin de Mme Babouchkine. Les saisons passent, le ciel
                             est changeant, la couleur des sapins varie, le vent souffle plus ou moins dans les branches.
@@ -120,7 +117,7 @@
                             ne meure je lis deux livres.</p>
                         <p>En la voyant en photo, avec son chignon de cheveux blancs, ses sourcils gris de vieille
                             femme, ses yeux sertis dans les rides, ses grosses joues, son port de tête, je lui trouve
-                            une sacrée ressemblance avec Mme Babouchkine.</p>
+                            une ressemblance avec Mme Babouchkine.</p>
                         <p>Être libre malgré tout et beau comme Zénon.</p>
                         <br />
                         <p>La chat Nestor grossit à vue d’œil alors que nous n’avons pas l’impression de lui donner
@@ -139,18 +136,18 @@
                             maison, une baraque de bric et de broc dont, les fins d’après-midi d’hiver, les fenêtres
                             sont éclairées d’une lumière dorée.</p>
                         <p>Donc, de retour du collège, je passe devant chez Mme Babouchkine et je vois le chat Nestor de
-                            l’autre côté du grillage. Je l’appelle, je l’amadoue, mais il m’ignore superbement. Alors
+                            l’autre côté du grillage. Je l’appelle, je l’amadoue, il m’ignore. Alors
                             surgit de l’ombre la vieille dame qui tient dans ses bras un chat noir, dont elle m’apprend
                             qu’il s’appelle Trésor, qu’il est le grand ami de notre chat Nestor (elle connaît son nom).
                             Chaque jour Nestor les visite, elle et Trésor, et chaque jour elle les nourrit ensemble.</p>
                         <p>La dame, cheveux blancs ramenés en arrière dans un chignon, est corpulente, enveloppée dans
-                            une longue robe et dans deux ou trois châles et foulards. Elle m’invite à entrer.</p>
+                            une longue robe et dans deux ou trois châles et foulards. Elle me fait entrer.</p>
                         <p>Je prends l’habitude de lui rendre visite de temps en temps, et souvent je retrouve mon chat
                             dans la maison de bric et de broc, bien au chaud sur un tapis près du poêle, comme chez lui.
                         </p>
                         <p>La maison est sombre, les sapins du jardin mangent la lumière. Il fait une chaleur épaisse de
                             poêle à charbon. Il y a un samovar et des icônes, des étages de livres en russe et en
-                            français, des fauteuils et un sofa, velours.</p>
+                            français, des fauteuils et un sofa, du velours.</p>
                         <p>Mme Babouchkine se satisfait d’aller deux fois par semaine aux bains-douches municipaux. Elle
                             a pris rendez-vous avec le maire à ce sujet et à d’autres.</p>
                         <p>– C’est un communiste mais il est très aimable.</p>
@@ -160,7 +157,7 @@
                             quand elle était plus riche, à Saint-Pétersbourg et dans son domaine à la campagne. Un jour,
                             elle a vu le tsar et la tsarine de près. Elle ouvre les bras puis les referme sur sa
                             poitrine pour dire que tout a disparu. Je fixe ses yeux décolorés, pris dans leurs paupières
-                            ridées, qui ont vu le dernier tsar de près et font effleurer le passé révolu. Reste une
+                            ridées, qui ont vu le dernier tsar de près. Reste une
                             icône qu’elle me désigne, sauvée du naufrage grâce à une négociation équivoque avec un
                             commissaire bolchevik.</p>
                         <p>Quand je parle à Marc de la dame russe qui habite dans ma rue, il me demande quelle âge elle
@@ -172,7 +169,7 @@
                             ce projet, Mme Babouchkine a déjà perdu la tête, de sorte qu’elle ne se souvient plus de
                             l’histoire du tsar ou de l’or que son mari aurait dû transférer au Crédit Lyonnais à Paris.
                             Alors, dans le haut parleur, il n’y a que la voix enrouée, en voie d’extinction, qui égrène
-                            avec un accent slave des phrases interrompues et me demande parfois qui je suis.</p>
+                            avec un accent slave des phrases interrompues et me demande qui je suis.</p>
                         <p>Le chat Trésor meurt. Sans doute parce que Mme Babouchkine ne lui donne plus à manger, le
                             chat Nestor ne va plus chez elle et maigrit.</p>
                         <p>Mme Babouchkine, je la revois un soir d’été. Elle est en robe de chambre contre son grillage,
