modif page Index

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <div class="container">
             <div class="text-center fontmenu">
                 <h1>le voyage extérieur</h1>
+                <h2>Laurent Villate</h2>
             </div>
         </div>
         <hr />
@@ -91,9 +92,6 @@
         <div class="container">
             <div class="card-text pt-1 fontfooter">
                 Images et textes: Laurent Villate
-            </div>
-            <div class="card-text fontfooter">
-                Conception et réalisation: Image Rare
             </div>
             <div class="card-text pb-1 fontfooter">
                 © 2023
