modif nom fichier

--- a/autoportrait_en_pied.html
+++ b/autoportrait_en_pied.html
@@ -113,7 +113,7 @@
           <p class="card-title fontseparateur">SOMMAIRE</p>
           <!--TITRE DES CHAPITRE AVEC CLASS SOMMAIRECHAPITRECOURANT POUR LE CHAPITRE EN COURS-->
           <div style="line-height: 200%;">
-            <p><a class="card-text sommairechapitrecourant" href="autoportrait1.html">Autoportrait en pied (1)</a></p>
+            <p><a class="card-text sommairechapitrecourant" href="autoportrait_en_pied.html">Autoportrait en pied (1)</a></p>
             <p><a class="card-text sommaire" href="ami.html">L'ami qui me parle</a></p>
             <p><a class="card-text sommaire" href="parleurs.html">Les hauts-parleurs</a></p>
             <p><a class="card-text sommaire" href="sud.html">Sud-Express</a></p>
