--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="container">
             <div class="text-center fontmenu">
                 <h1>le voyage extérieur</h1>
-                <h2>Laurent Villate</h2>
+                <h2>laurent villate</h2>
             </div>
         </div>
         <hr />
@@ -72,14 +72,14 @@
                 <div id="sommaire" class="card py-2 px-4 h-100  border-white">
                     <p class="card-title fontseparateur">SOMMAIRE</p>
                     <div style="line-height: 200%;">
-                        <p><a class="card-text sommaire" href="autoportrait1.html">Autoportrait en pied</a></p>
-                        <p><a class="card-text sommaire" href="ami.html">L'ami qui me parle</a></p>
-                        <p><a class="card-text sommaire" href="parleurs.html">Les hauts-parleurs</a></p>
-                        <p><a class="card-text sommaire" href="sud.html">Sud-Express</a></p>
-                        <p><a class="card-text sommaire" href="splendeur.html">La splendeur du trône</a></p>
-                        <p><a class="card-text sommaire" href="portes.html">Les portes bleues</a></p>
-                        <p><a class="card-text sommaire" href="mots.html">Les mots de passe</a></p>
-                        <p><a class="card-text sommaire" href="passage.html">Petit passage</a></p>
+                        <p><a class="card-text sommaire" href="autoportrait_en_pied.html">Autoportrait en pied</a></p>
+                        <p><a class="card-text sommaire" href="l_ami_qui_me_parle.html">L'ami qui me parle</a></p>
+                        <p><a class="card-text sommaire" href="les_voix_dans_les_hauts_parleurs.html">Les hauts-parleurs</a></p>
+                        <p><a class="card-text sommaire" href="sud_express.html">Sud-Express</a></p>
+                        <p><a class="card-text sommaire" href="la_splendeur_du_trone.html">La splendeur du trône</a></p>
+                        <p><a class="card-text sommaire" href="les_portes_bleues.html">Les portes bleues</a></p>
+                        <p><a class="card-text sommaire" href="les_mots_de_passe.html">Les mots de passe</a></p>
+                        <p><a class="card-text sommaire" href="petit_passage.html">Petit passage</a></p>
                     </div>
                 </div>
             </div>
